# template_cpp_static_library

./: CMakeLists.txt  README.md
src/: calculator.cpp  calculator.h
